fixed warnings + modal problem on small screens

--- a/src/assets/sass/material-dashboard/_sidebar-and-main-panel.scss
+++ b/src/assets/sass/material-dashboard/_sidebar-and-main-panel.scss
@@ -5,7 +5,7 @@
 }
 
 .sidebar{
-    position: absolute;
+    position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
@@ -407,7 +407,6 @@
 .main-panel{
     position: relative;
     float: right;
-    overflow: auto;
     width: $sidebar-width;
     min-height: 100%;
     @include transition (0.33s, cubic-bezier(0.685, 0.0473, 0.346, 1));
